cluster/apps/default/transmission/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: default-lb
  name: transmission-ingress
spec:
  tls:
  - hosts:
    - "transmission.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: transmission.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transmission-transmission-openvpn
              port:
                name: http
